package(
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "parser",
    srcs = ["parser.cc"],
    hdrs = ["parser.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_constructors",
        ":token",
        "//gutils:status",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:quote",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
    ],
)

cc_test(
    name = "parser_test",
    size = "small",
    srcs = ["parser_test.cc"],
    deps = [
        ":parser",
        ":token",
        "//gutils:protocol_buffer_matchers",
        "//gutils:status",
        "//gutils:status_matchers",
        "//p4_constraints:ast_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "lexer",
    srcs = ["lexer.cc"],
    hdrs = ["lexer.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":token",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/strings",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_test(
    name = "lexer_test",
    size = "small",
    srcs = ["lexer_test.cc"],
    deps = [
        ":lexer",
        ":token",
        "//p4_constraints:ast_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "token",
    srcs = ["token.cc"],
    hdrs = ["token.h"],
    deps = [
        "//p4_constraints:ast_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "token_test",
    size = "small",
    srcs = ["token_test.cc"],
    deps = [
        ":token",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "ast_constructors",
    srcs = ["ast_constructors.cc"],
    hdrs = ["ast_constructors.h"],
    linkopts = ["-lgmpxx"],
    deps = [
        ":token",
        "//gutils:ret_check",
        "//gutils:status",
        "//p4_constraints:ast_cc_proto",
        "@com_google_absl//absl/types:span",
    ],
)
