load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "parser",
    srcs = ["parser.cc"],
    hdrs = ["parser.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_constructors",
        ":constraint_kind",
        ":lexer",
        ":token",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints:quote",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "parser_test",
    size = "small",
    srcs = ["parser_test.cc"],
    deps = [
        ":constraint_kind",
        ":parser",
        ":token",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "lexer",
    srcs = ["lexer.cc"],
    hdrs = ["lexer.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":token",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@re2",
    ],
)

cc_test(
    name = "lexer_test",
    size = "small",
    srcs = ["lexer_test.cc"],
    deps = [
        ":lexer",
        ":token",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "token",
    srcs = ["token.cc"],
    hdrs = ["token.h"],
    deps = [
        "//p4_constraints:ast_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_test(
    name = "token_test",
    size = "small",
    srcs = ["token_test.cc"],
    deps = [
        ":token",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ast_constructors",
    srcs = ["ast_constructors.cc"],
    hdrs = ["ast_constructors.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":constraint_kind",
        ":token",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:big_int",
        "//p4_constraints:ret_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "constraint_kind",
    hdrs = ["constraint_kind.h"],
    visibility = ["//visibility:public"],
)
